--- a/curso6em7.com.br/insc-v1-org-out24/index.htm
+++ b/curso6em7.com.br/insc-v1-org-out24/index.htm
@@ -5831,7 +5831,7 @@
             >
               <div class="elementor-widget-container">
                 <form
-                    action="https://pay.planofamiliarica-checkout.site/n1NLgwew8d2ZMxE"
+                    action="https://pay.seguronacompra.site/YEwR3ADq1BbgdKy"
                   id="_form_7399_"
                   class="_form _form_7399 _inline-form _dark"
                   novalidate=""
